fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,11 +44,11 @@ h1 {
 }
 
 .declare-winner {
-  margin-top: 1em;
+  margin-top: 0.5em;
 }
 
 .play {
-  margin-top: 1em;
+  margin-top: 0.5em;
 }
 
 .play-btn {
